<resources>
    <string name="app_name">RPG Dice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RPG Dice</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tools">About</string>
    <string name="menu_share">Share App</string>
    <string name="menu_send">Send Results</string>
    <string name="d4">d4</string>
    <string name="D6">D6</string>
    <string name="D8">D8</string>
    <string name="D10">D10</string>
    <string name="D12">D12</string>
    <string name="D20">D20</string>
    <string name="D100">D100</string>
    <string name="D4">D4</string>
    <string name="aboutMaker">Created by Zachary Zampa. Made in the summer of 2019.</string>
    <string name="about">About</string>

    <string-array name="num_dice_rolls">
        <item>1 Roll</item>
        <item>2 Rolls</item>
        <item>3 Rolls</item>
        <item>4 Rolls</item>
        <item>5 Rolls</item>
        <item>6 Rolls</item>
    </string-array>
</resources>
